syntax = "proto3";

package user;

option go_package = "ticket-booking/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string confirm_password = 4;
}

message RegisterResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string token = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string token = 4;
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}